# caf-cl-bench

./: CMakeLists.txt  FindLibcaf.cmake  Makefile  README.md  configure
include/: calculate_fractal.hpp  client.hpp  config.hpp
src/: client.cpp  config.cpp  main.cpp
